--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "format": "prettier --write '{src,tests}/**/*.{css,scss,html,js,tsx}'"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "15.3.2",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
