--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
