--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "check": "prettier --check '{src,tests}/**/*.{css,scss,html,js,tsx}'",
-    "format": "prettier --write '{src,tests}/**/*.{css,scss,html,js,tsx}'"
+    "format": "prettier --write '{src,tests}/**/*.{css,scss,html,js,tsx}'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
@@ -22,9 +25,17 @@
     "sass": "^1.89.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
